--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,193 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.body{
+    font-family: 'open sans';
+}
+
+.contenedor{
+    padding: 80 px 0;
+    width: 90%;
+    max-width: 1000px;
+    margin: auto;
+    overflow: hidden;
+}
+
+.title{
+    color: #642a73;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 60px;
+}
+/* Header */
+
+header{
+    width: 100%;
+    height: 600px;
+    background: #373B44;  
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, hsla(217, 89%, 61%, 0.616), hsla(222, 11%, 24%, 0.603)), url(./app/img/saludAlimentaria.jpeg); 
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, hsla(217, 89%, 61%, 0.616), hsla(222, 11%, 24%, 0.603)), url(./app/img/saludAlimentaria.jpeg); 
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+}
+
+header h1.titulo{
+    padding: 50px 0;
+    color: #fff;
+    text-align: center;
+}
+
+nav{
+    text-align: right;
+    padding: 30px 50px 0 0;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav > a{
+    color: #fff;
+    font-weight: 500;
+    font-size: 20px;
+    text-decoration: none;
+    margin-right: 15px;
+}
+
+nav > a:hover{
+    padding: 5px;
+    text-decoration: underline;
+}
+
+header .info-header{
+    display: flex;
+    height: 400px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.info-header h1{
+    font-size: 50px;
+    color: #fff;
+}
+
+.info-header h2{
+    padding: 20px 0;
+    font-size: 30px;
+    font-weight: 300;
+    color: #fff;
+}
+
+.wave{
+    bottom: 0;
+    width: 100%;
+    height: 150px;
+    background: hsla(217, 83%, 21%, 0.575);
+}
+
+/* contenedor calculadora inputs */
+.contenido-calculadora-inputs{
+    padding: 50px;
+    width: 48%;
+}
+
+.contenido-calculadora-inputs h3{
+    margin-bottom: 20px;
+}
+
+.contenido-calculadora-inputs span{
+    background: #4d0686;
+    color: #fff;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    box-shadow: 0 0 6px 0 rgba(0,0,0,.5);
+    margin-right: 10px;
+}
+
+.calculaIMC-button {
+    cursor: pointer;
+    font-weight: bold;
+    margin: 10px 20px;
+    }
+
+.btn-operations{
+    height: 30px;
+}
+
+.progress{
+    background: #373B44
+}
+
+/* contenedor calculadora resultados */
+.contenido-resultado{
+    padding: 100px 250px;
+}
+
+.contenido-resultado textarea{
+    height: 300px;
+    text-align: center;
+    font-size: 30px;
+    color: #4286f4;
+    font-weight: bold;
+}
+.contenido-resultado label{
+    align-items: center;
+    font-size: 20px;
+    font-weight: lighter;
+}
+
+.progress-imc{
+    font-size: 20px;
+    text-align: center;
+}
+
+.progress-imc h2{
+    color: #642a73;
+    padding: 50px;
+}
+
+.progress-imc div{
+    color: #203A43;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+
+.progress-imc ul li{
+    text-decoration: none;
+}
+
+.progress-imc ul li a{
+    color: #0052D4;
+    padding: 26px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.acciones-nav{
+    padding: 10px;
+    font-weight: 200;
+}
+
+.acciones-nav nav{
+    background:  #fff;
+}
+
+.acciones-nav nav a{
+    color: #000000;
+    margin-left: auto;
+}
