se añadio el landingPage con el componente navbar inicial

--- a/src/app/imcui/imcui.component.html
+++ b/src/app/imcui/imcui.component.html
@@ -1,3 +1,16 @@
+<app-navbar-inicial></app-navbar-inicial>
+<header>
+  <section class="info-header">
+    <h1>Calcula tu IMC</h1>
+    <h2>Obtén mas información de interés a través de la sección conoce más en nuestra barra de navegación
+    </h2>
+  </section>
+</header>
+<div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+  style="height: 100%; width: 100%;">
+  <path d="M-17.77,59.70 C139.67,148.52 364.27,-48.84 500.84,66.61 L500.00,150.00 L0.00,150.00 Z"
+    style="stroke: none; fill: #fff;"></path>
+</svg></div>
 <main>
     <section class="contenedor calculadora-inputs">
       <h2 class="title">Ingresa los datos</h2>
