--- a/src/styles.css
+++ b/src/styles.css
@@ -39,7 +39,7 @@ header{
 }
 
 header h1.titulo{
-    padding: 50px 0;
+    padding: 40px 0;
     color: #fff;
     text-align: center;
 }
@@ -54,7 +54,7 @@ nav{
 nav > a{
     color: #fff;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 15px;
     text-decoration: none;
     margin-right: 15px;
 }
@@ -75,7 +75,7 @@ header .info-header{
 }
 
 .info-header h1{
-    font-size: 50px;
+    font-size: 40px;
     color: #fff;
 }
 
@@ -95,7 +95,7 @@ header .info-header{
 
 /* contenedor calculadora inputs */
 .contenido-calculadora-inputs{
-    padding: 50px;
+    padding: 40px;
     width: 48%;
 }
 
@@ -122,7 +122,7 @@ header .info-header{
     margin: 10px 20px;
     }
 
-.btn-operations{
+#btn-operations{
     height: 30px;
 }
 
@@ -136,16 +136,17 @@ header .info-header{
 }
 
 .contenido-resultado textarea{
-    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 250px;
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
     color: #4286f4;
     font-weight: bold;
 }
-.contenido-resultado label{
-    align-items: center;
-    font-size: 20px;
-    font-weight: lighter;
+
+#contenido-resultado label{
+    font-size: 50px;
 }
 
 .progress-imc{
@@ -155,7 +156,7 @@ header .info-header{
 
 .progress-imc h2{
     color: #642a73;
-    padding: 50px;
+    padding: 40px;
 }
 
 .progress-imc div{
