--- a/src/app/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/iniciar-sesion/iniciar-sesion.component.html
@@ -13,8 +13,7 @@
                 <input type="password" id="contra" class="form-control" #inputContra placeholder="Ingresa tu Contraseña">
             </div>
             <div class="text-center">
-                <p><a href="/#">¿Has olvidado tu contraseña?</a></p>
-                <p>¿No tienes cuenta? <a href="/registro"> Regístra tu cuenta</a></p>
+                <p>¿No tienes cuenta? <a href="/registrate"> Regístra tu cuenta</a></p>
             </div>
             <div class="text-center">
                 <input type="submit" value="Iniciar" class="btn btn-lg btn_spotify mt-3">
