iniciarSesion y registrarse funcionando

--- a/src/app/uiusuario/uiusuario.component.html
+++ b/src/app/uiusuario/uiusuario.component.html
@@ -1,4 +1,9 @@
-<app-navbar-inicial></app-navbar-inicial>
+<app-imcui></app-imcui>
+<div>
+  <div id="btn-operations" class="btn-group btn-group-lg">
+    <button type="button" class="btn btn-primary calculaIMC-button" style="text-align:center">Guarda tu Resultado</button>
+  </div>
+</div>
 <h1 class="principal">Registros</h1>
 <table id="historial" class="table">
     <thead class="thead-dark">
