--- a/src/app/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/iniciar-sesion/iniciar-sesion.component.html
@@ -5,7 +5,7 @@
         <h1 class="text-center">Iniciar Sesión</h1>
         <form>
             <div class="form-group">
-                <h5>Correo electrónico:</h5>
+                <h5>Nombre de usuario:</h5>
                 <input id="nombreUsuario" [(ngModel)]="nombreUsuario" type="text" class="form-control operator1" name="operator1" placeholder="Ingresa tu Nombre de Usuario">
             </div>
             <div class="form-group">
