--- a/src/app/uiusuario/uiusuario.component.css
+++ b/src/app/uiusuario/uiusuario.component.css
@@ -12,3 +12,45 @@
     font-weight: bold;
     padding: 20px;
 }
+
+.operacionesIMC{
+    padding: 30px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+}
+
+.operacionesIMC button{
+    height: 40px;
+}
+
+.peso-bajo{
+    Background:#01b520;
+
+}
+
+.peso-normal{
+    Background: #50df2f;
+
+}
+
+.sobrepeso{
+    Background: #ffff01;
+
+}
+
+.obecidad-1{
+    Background: #ffc801;
+
+}
+
+.obecidad-2{
+    Background: #ff9000;
+
+}
+
+.obecidad-3{
+    Background: #ff2100;
+
+}
