--- a/src/app/uiusuario/uiusuario.component.html
+++ b/src/app/uiusuario/uiusuario.component.html
@@ -24,7 +24,7 @@
       </div>
       <section class="operacionesIMC">
         <button type="button" class="btn btn-primary calculaIMC-button" (click)="calculaIMC()" >Calcula tu IMC</button>
-        <button id="guardarIMC" type="button" class="btn btn-primary calculaIMC-button" >Guarda tu Resultado</button>
+        <button id="guardarIMC" type="button" class="btn btn-primary calculaIMC-button" (click)="guardarIMC()">Guarda tu Resultado</button>
       </section>
     </section>
   </section>
