funcion cerrar sesion añadida #26

--- a/src/app/imcui/imcui.component.html
+++ b/src/app/imcui/imcui.component.html
@@ -57,12 +57,12 @@
       <h2>IMC Hombres +18</h2>
       <ul class="items-imc">
         <li>
-          <a href="#">Bajo peso</a>
-          <a href="#">Peso normal</a>
-          <a href="#">Sobrepeso</a>
-          <a href="#">Obesidad 1</a>
-          <a href="#">Obesidad 2</a>
-          <a href="#">Obesidad morbida</a>
+          <a>Bajo peso</a>
+          <a>Peso normal</a>
+          <a>Sobrepeso</a>
+          <a>Obesidad 1</a>
+          <a>Obesidad 2</a>
+          <a>Obesidad morbida</a>
         </li>
       </ul>
       <div class="progress progress-striped active">
@@ -89,12 +89,12 @@
       <h2>IMC Mujeres +18</h2>
       <ul class="items-imc">
         <li>
-          <a href="#">Bajo peso</a>
-          <a href="#">Peso normal</a>
-          <a href="#">Sobrepeso</a>
-          <a href="#">Obesidad 1</a>
-          <a href="#">Obesidad 2</a>
-          <a href="#">Obesidad morbida</a>
+          <a>Bajo peso</a>
+          <a>Peso normal</a>
+          <a>Sobrepeso</a>
+          <a>Obesidad 1</a>
+          <a>Obesidad 2</a>
+          <a>Obesidad morbida</a>
         </li>
       </ul>
       <div class="progress progress-striped active">
