--- a/src/app/uiusuario/uiusuario.component.html
+++ b/src/app/uiusuario/uiusuario.component.html
@@ -1,3 +1,4 @@
+<app-navbar-usuario></app-navbar-usuario>
 <main>
   <section class="contenedor calculadora-inputs">
     <h2 class="title">Ingresa los datos</h2>
@@ -44,12 +45,12 @@
       <h2>IMC +18</h2>
       <ul class="items-imc">
         <li>
-          <a href="#">Bajo peso</a>
-          <a href="#">Peso normal</a>
-          <a href="#">Sobrepeso</a>
-          <a href="#">Obesidad 1</a>
-          <a href="#">Obesidad 2</a>
-          <a href="#">Obesidad morbida</a>
+          <a>Bajo peso</a>
+          <a>Peso normal</a>
+          <a>Sobrepeso</a>
+          <a>Obesidad 1</a>
+          <a>Obesidad 2</a>
+          <a>Obesidad morbida</a>
         </li>
       </ul>
       <div class="progress progress-striped active">
@@ -81,7 +82,7 @@
 <table id="historial" class="table">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">#</th>
+      <th scope="col">ID</th>
       <th scope="col">Usuario</th>
       <th scope="col">IMC</th>
       <th scope="col">Estado Actual</th>
