--- a/src/app/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/iniciar-sesion/iniciar-sesion.component.html
@@ -6,11 +6,11 @@
         <form>
             <div class="form-group">
                 <h5>Nombre de usuario:</h5>
-                <input id="nombreUsuario" [(ngModel)]="nombreUsuario" type="text" class="form-control operator1" name="operator1" placeholder="Ingresa tu Nombre de Usuario">
+                <input id="nombreUsuario" [(ngModel)]="nombreUsuario" type="text" class="form-control nombreUsuario" name="nombreUsuario" placeholder="Ingresa tu Nombre de Usuario">
             </div>
             <div class="form-group">
                 <h5>Contraseña:</h5>
-                <input id="contrasenia" [(ngModel)]="contrasenia"  type="password" class="form-control operator2" name="operator2" placeholder="Ingresa tu Contraseña">
+                <input id="contrasenia" [(ngModel)]="contrasenia"  type="password" class="form-control contrasenia" name="contrasenia" placeholder="Ingresa tu Contraseña">
             </div>
             <div class="text-center">
                 <p>¿No tienes cuenta? <a href="/registrate"> Regístra tu cuenta</a></p>
