se añadio archivos de ngbuild y firebase

--- a/src/app/uiusuario/uiusuario.component.html
+++ b/src/app/uiusuario/uiusuario.component.html
@@ -83,7 +83,7 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col">ID</th>
-      <th scope="col">Usuario</th>
+      <!-- <th scope="col">Usuario</th> -->
       <th scope="col">IMC</th>
       <th scope="col">Estado Actual</th>
       <th scope="col">Peso Minimo Ideal</th>
@@ -93,7 +93,7 @@
   <tbody>
     <tr *ngFor = 'let peso of imcApi$'>
       <td>{{peso.id}}</td>
-      <td>{{peso.username}}</td>
+      <!-- <td>{{peso.username}}</td> -->
       <td>{{peso.imc}}</td>
       <td>{{peso.estado}}</td>
       <td>{{peso.peso_min}}</td>
