--- a/src/app/uiusuario/uiusuario.component.html
+++ b/src/app/uiusuario/uiusuario.component.html
@@ -1,7 +1,7 @@
 <app-navbar-usuario></app-navbar-usuario>
 <main>
   <section class="contenedor calculadora-inputs">
-    <h2 class="title">Ingresa los datos</h2>
+    <h2 class="title">Ingresa tus datos</h2>
     <section class="contenido-calculadora-inputs">
       <h3><span>1</span>Genero</h3>
       <div id="inputs-operators" class="input-group">
